--- a/vector_spaces.tex
+++ b/vector_spaces.tex
@@ -370,11 +370,11 @@ Having defined a type of mathematical object, we are now morally obligated to sp
 \begin{exm}{Shift operators}{ShiftOperator}\index{Shift operator}
 	Let $\K$ be a ring.  Then, the \term{left-shift operator}\index{left-shift operator} $L\colon \K ^{\N}\rightarrow \K ^{\N}$ and \term{right-shift operator}\index{Right-shift operator} $R\colon \K ^{\N}\rightarrow \K ^{\N}$ are defined respectively by
 	\begin{equation}
-		L\left( \coord{v^0,v^1,v^2,\ldots }\right) \ceqq \coord{0,v^0,v^1,\ldots} 
+	L\left( \coord{v^0,v^1,v^2,\ldots }\right) \ceqq \coord{v^1,v^2,v^3,\ldots }.
 	\end{equation}
 	and
 	\begin{equation}
-		R\left( \coord{v^0,v^1,v^2,\ldots }\right) \ceqq \coord{v^1,v^2,v^3,\ldots }.
+		R\left( \coord{v^0,v^1,v^2,\ldots }\right) \ceqq \coord{0,v^0,v^1,\ldots} 
 	\end{equation}
 	\begin{rmk}
 		There are similar variants of these shift operators on $\K ^{\Z}$.
