--- a/eigen.tex
+++ b/eigen.tex
@@ -303,6 +303,9 @@ The whole point of discussing the ``eigenstuff'' was, as we saw in \crefnameref{
 	\end{enumerate}
 	In this case, if $\basis{B}$ is a basis of eigenvectors of $V$ consisting of eigenvectors of $T$, then $\coordinates{T}{\basis{B}\leftarrow \basis{B}}$ is a diagonal matrix.
 	\begin{rmk}
+		There is another important condition equivalent to these three which we can't quite state yet as we don't know what direct-sums are.  In brief, it says that a linear operator is diagonalizable iff $V$ is the direct-sum of its eigenspaces---see the remark in \cref{prp4.4.13}.
+	\end{rmk}
+	\begin{rmk}
 		In particular, as eigenspaces are of course at least one-dimensional, if $T$ has $\dim (V)$ distinct eigenvalues, then $T$ must be diagonalizable.  That said, the converse is not true---see \cref{exm4.3.4}.
 	\end{rmk}
 	\begin{rmk}
@@ -440,13 +443,80 @@ The precise sense in which we are going to decompose vector spaces is called the
 		Note how this definition is similar in ways to that of a basis---see \cref{dfn4.4.6,exr4.4.9}.
 	\end{rmk}
 \end{dfn}
-What follows is a criterion for checking whether a vector space can be written as a direct-sum.
+We will see that a given direct-sum decomposition is in many ways similar to the specification of a basis.  Indeed, there is a sense in which it is a generalization---see \cref{exr4.4.9}.  The notions of \emph{linear-independence} and \emph{spanning} generalized to the context of subspaces as well, and, as with bases, these concepts will help us understand direct-sum decompositions.
+\begin{thm}{Span (of subspaces)}{}
+	Let $V$ be a $\K$-module and let $\collection{W}$ be a collection of subspaces of $V$.  Then, there is a unique subspace of $V$, the \term{span}\index{Span (of subspaces)} of $\collection{W}$, $\Span (\collection{W})$\index[notation]{$\Span (\collection{W})$}, such that
+	\begin{enumerate}
+		\item $W\subseteq \Span (\collection{W})$ for all $S\in \collection{W}$; and
+		\item if $U\subseteq V$ is other subspace containing each $W\in \collection{W}$, it follows that $\Span (\collection{W})\subseteq U$.
+	\end{enumerate}
+	Furthermore, explicitly,
+	\begin{equation}
+		\Span (\collection{W})=\sum _{W\in \collection{W}}W.
+	\end{equation}
+	\begin{rmk}
+		Thus, if $\collection{W}=\{ W_1,\ldots ,W_m\}$, we have that
+		\begin{equation}
+			\begin{split}
+				\Span (W_1,\ldots ,W_m) & \ceqq \Span (\collection{W}) \\
+				& =W_1+\cdots +W_m.
+			\end{split}
+		\end{equation}
+	\end{rmk}
+	\begin{rmk}
+		It is incredibly uncommon to see people to write $\Span (W_1,\ldots ,W_m)$, and instead, people simply write the more explicit $W_1+\cdots +W_m$.
+	\end{rmk}
+	\begin{proof}
+		We leave this as an exercise.
+		\begin{exr}[breakable=false]{}{}
+			Prove the result.
+		\end{exr}
+	\end{proof}
+\end{thm}
+\begin{dfn}{Spanning (subspace)}{}
+	Let $V$ be a $\K$-module and let $\collection{W}$ be a collection of subspaces of $V$.  Then, $\collection{W}$ is \term{spanning}\index{Spanning (subspaces)} iff $\Span (\collection{W})=V$.
+	\begin{rmk}
+		Synonymously, we also say that $\collection{W}$ \term{spans}\index{Spans (of subspaces)} $V$.
+	\end{rmk}
+\end{dfn}
+\begin{dfn}{Linear-independence (of subspaces)}{}
+	Let $V$ be a $\K$-module and let $\collection{W}$  be a collection of subspaces of $V$.  Then, $\collection{W}$ is \term{linearly-independent}\index{Linearly-independent (subspaces)} iff for all $m\in \Z ^+$, $W_1,\ldots ,W_m\in \collection{W}$, $w_k\in W_k$,
+	\begin{equation}
+		w_1+\cdots +w_m=0\text{ implies }w_1=0,\ldots ,w_m=0.
+	\end{equation}
+	$\collection{W}$ is \term{linearly-dependent}\index{Linearly-depenent (subspaces)} iff it is not linearly-independent.
+\end{dfn}
+Now let us see in what sense these concepts are generalizations of the ones we met before.
+\begin{prp}{}{exr4.4.9}
+	Let $V$ be a $\K$-module and let $\basis{B}\subseteq V$.
+	\begin{enumerate}
+		\item $\basis{B}$ is spanning iff $\{ \Span (b):b\in \basis{B}\}$ is spanning.
+		\item $\basis{B}$ is linearly-independent iff $\{ \Span (b):b\in \basis{B}\}$ is linearly-independent.
+		\item $\basis{B}$ is a basis iff
+		\begin{equation}\label{eqn4.4.35}
+			V=\bigoplus _{b\in \basis{B}}\Span (b).
+		\end{equation}
+	\end{enumerate}
+	\begin{rmk}
+		In finite dimensions, with $\basis{B}\eqqc \{ b_1,\ldots ,b_d\}$, \eqref{eqn4.4.35} reads
+		\begin{equation}\label{eqn4.4.23}
+			V=\Span (b_1)\oplus \cdots \oplus \Span (b_d).
+		\end{equation}
+	\end{rmk}
+	\begin{proof}
+		We leave this as an exercise.
+		\begin{exr}[breakable=false]{}{}
+			Prove the result.
+		\end{exr}
+	\end{proof}
+\end{prp}
+This suggests the following criterion for checking whether a vector space can be written as a direct-sum.
 \begin{prp}{Criterion for direct-sums of an arbitrary collection of subspaces}{prp4.4.7}
 	Let $V$ be a $\K$-module, let $\collection{W}$ be a collection of subspaces of $V$.  Then,
 	\begin{equation}
 		V=\bigoplus _{W\in \collection{W}}W
 	\end{equation}
-	iff (i) $V=\sum _{W\in \collection{W}}W$ and (ii) the equation $0=w_1+\cdots +w_m$ with $w_k\in W_k$, $W_1,\ldots ,W_m$ distinct elements of $\collection{W}$, implies every $w_k=0$.
+	iff $\collection{W}$ is linearly-independent and spans $V$.
 	\begin{rmk}
 		Again, the case where $\collection{W}\ceqq \{ W_1,\ldots ,W_M\}$ is clearer.  It says:
 		\begin{equation}
@@ -455,10 +525,38 @@ What follows is a criterion for checking whether a vector space can be written a
 		iff (i) $V=W_1+\cdots +W_m$ and (ii) the equation $0=w_1+\cdots +w_m$ with $w_k\in W_k$ implies every $w_k=0$.
 	\end{rmk}
 	\begin{proof}
-		We leave this as an exercise.
-		\begin{exr}[breakable=false]{}{}
-			Prove the result yourself.
-		\end{exr}
+		$(\Rightarrow )$ Suppose that
+		\begin{equation}
+			V=\bigoplus _{W\in \collection{W}}W.
+		\end{equation}
+		By definition, this means that for every $v\in V$ there are unique $v^W\in W$ such that
+		\begin{equation}
+			v=\sum _{W\in \collection{W}}v^W.
+		\end{equation}
+		In particular, there are \emph{some} sum $v^W$s, and so $V=\sum _{W\in \collection{W}}W$.  Thus, $\collection{W}$ spans $V$.  For linear-independence, suppose that
+		\begin{equation}
+			0=\sum _{W\in \collection{W}}v^W.
+		\end{equation}
+		As we also have
+		\begin{equation}
+			0=\sum _{v\in \collection{W}}0,
+		\end{equation}
+		uniqueness implies that $v^W$, and so $\collection{W}$ is linearly-independent, as desired.
+		
+		\blni
+		$(\Leftarrow )$ Suppose that $\collection{W}$ is linearly-independent and spans $V$.  Let $v\in V$.  As $\collection{W}$ spans $V$, there are $v^W\in W$ such that
+		\begin{equation}
+			v=\sum _{W\in \collection{W}}v^W.
+		\end{equation}
+		To show uniqueness, suppose that there are other $u^W\in W$ such that
+		\begin{equation}
+			v=\sum _{W\in \collection{W}}u^W.
+		\end{equation}
+		Subtracting these two expressions for $v$, we find
+		\begin{equation}
+			0=\sum _{W\in \collection{W}}[v^W-u^W],
+		\end{equation}
+		whence $v^W=u^W$ by linear-independence, giving us uniqueness, as desired.
 	\end{proof}
 \end{prp}
 The case of two subspaces is particularly important, and in this case the criterion simplifies, and so we state it separately.
@@ -481,6 +579,32 @@ The case of two subspaces is particularly important, and in this case the criter
 		$(\Leftarrow )$ Suppose that the equation $0=u+w$ with $u\in U$ and $w\in W$ implies $u=0=w$.  Let $v\in U\cap W$.  We have that $0=v+(-v)$, and as $v\in U$ and $-v\in W$, it follows in particular that $v=0$, and hence $U\cap W=0$.
 	\end{proof}
 \end{crl}
+There are also more practical criterion specific to the finite-dimensional case.
+\begin{prp}{}{prp4.4.13}
+	Let $V$ be a finite-dimensional vector space and let $W_1,\ldots ,W_m\subseteq V$ be subspaces such that
+	\begin{equation}
+		\dim (V)=\dim (W_1)+\cdots +\dim (W_m).
+	\end{equation}
+	\begin{enumerate}
+		\item If $\{ W_1,\ldots ,W_m\}$ is spanning, then $V=W_1\oplus \cdots \oplus W_m$.
+		\item If $\{ W_1,\ldots ,W_m\}$ are linearly-independent, then $V=W_1\oplus \cdots \oplus W_m$.
+	\end{enumerate}
+	\begin{rmk}
+		Thus, if the sum of the dimensions of the $W_k$s add up to that of $V$, then you only need to check one of the two usual conditions, instead of both.
+	\end{rmk}
+	\begin{rmk}
+		Note that a corollary of this (together with \cref{FundamentalTheoremOfDiagonalizability}) is that a linear operator $V\rightarrow V$ is diagonalizable iff $V$ is the direct-sum of its eigenspaces:
+		\begin{equation}
+			V=\Eig _{\lambda _1}\oplus \cdots \oplus \Eig _{\lambda _m}.
+		\end{equation}
+	\end{rmk}
+	\begin{proof}
+		We leave this as an exercise.
+		\begin{exr}[breakable=false]{}{}
+			Prove the result.
+		\end{exr}
+	\end{proof}
+\end{prp}
 \begin{exm}{$W_1,W_2,W_3\subseteq V$ subspaces with trivial pairwise intersections and $V=W_1+W_2+W_3$ but $V\neq W_1\oplus W_2\oplus W_3$}{exm4.4.13}
 	Define $V\ceqq \R ^2$, $W_1\ceqq \Span (\coord{1,0})$, $W_2\ceqq \Span (\coord{0,1})$, and $W_3\ceqq \Span (\coord{1,1})$.  Then, $W_1\cap W_2=0$, $W_1\cap W_3=0$, $W_2\cap W_3=0$, $W_1+W_2+W_3=V$, but the sum is not direct:  we can write both
 	\begin{equation}
@@ -586,25 +710,8 @@ Direct-sums allow us to define \emph{projections}.
 
 We saw in \cref{CoordinatesVector} that, given a basis of a $\K$-module $V$, we can define the \emph{coordinates} of elements of $v$ with respect to that basis.  In a similar way, we can also talk about the coordinates of elements of $V$ with respect to a direct-sum decomposition.   In fact, the definition of coordinates we learned before is a special case of this---see \cref{exr4.4.9}.
 
-We saw before that the coordinates of an `abstract' vector was an element of $\K ^d$, $\K$ the ground ring.  Given a direct-sum decomposition $V=W_1\oplus \cdots \oplus W_m$, the first question we must address is ``What plays the role of $\K ^d$ in this context?''.  The following result will help us answer this question. To understand this, we first note how a basis yields a direct-sum decomposition.
-\begin{prp}{}{exr4.4.9}
-	Let $V$ be a $\K$-module, and let $\basis{B}$ be a basis of $V$.  Then,
-	\begin{equation}
-	V=\bigoplus _{b\in \basis{B}}\Span (b).
-	\end{equation}
-	\begin{rmk}
-		In finite dimensions, with $\basis{B}\eqqc \{ b_1,\ldots ,b_d\}$, this reads
-		\begin{equation}\label{eqn4.4.23}
-			V=\Span (b_1)\oplus \cdots \oplus \Span (b_d).
-		\end{equation}
-	\end{rmk}
-	\begin{proof}
-		We leave this as an exercise.
-		\begin{exr}[breakable=false]{}{}
-			Prove the result.
-		\end{exr}
-	\end{proof}
-\end{prp}
+We saw before that the coordinates of an `abstract' vector was an element of $\K ^d$, $\K$ the ground ring.  Given a direct-sum decomposition $V=W_1\oplus \cdots \oplus W_m$, the first question we must address is ``What plays the role of $\K ^d$ in this context?''.  To see what the answer should be, recall (\cref{exr4.4.9}) that, given a basis $\basis{B}$ of $V$, $V$ can be written as the direct-sum of the subspaces $\{ \Span (b):b\in \basis{B}\}$.
+
 Over a division ring $\F$, $\Span (b)\cong _{\Vect _{\F}}\F$ via the map $\F \ni \alpha \mapsto \alpha \cdot b\in \Span (b)$.  Thus, if $\basis{B}\eqqc \{ b_1,\ldots ,b_d\}$ is a basis for the vector space $V$, after identifying each $\Span (b_k)$ with $\F$, \eqref{eqn4.4.23} reads
 \begin{equation}
 	V\cong \underbrace{\F \oplus \cdots \oplus \F}_d.
@@ -763,10 +870,10 @@ is not.  Similarly, we may speak of direct-sums of matrices and so on.
 
 We now turn to defining the coordinates of a linear-transformation with respect to direct-sum decompositions.  Our ability to do this will follow from what are in their own right important properties of direct-sum decompositions.  The first of these properties is that direct-sum decompositions of a vector space allow one to define a linear-transformation by defining what it does on all the ``summands''.  The second of these properties is the dual property involving mapping \emph{into} summands.  We state both results here.
 \begin{thm}{Finite direct-sums are biproducts}{thm4.4.14}
-	Let $U$ and $V$ be $\K$-modules, and let $W_1,\ldots ,W_m\subseteq V$ be subspaces such that $V=W_1\oplus \cdots \oplus W_m$.
+	Let $U$ and $V$ be $\K$-modules, and let $V_1,\ldots ,V_m\subseteq V$ be subspaces such that $V=V_1\oplus \cdots \oplus V_m$.
 	\begin{enumerate}
-		\item \label{thm4.4.14(i)}Let $S_k\colon U\rightarrow W_k$ be linear.  Then, there is a unique linear-transformation $S\colon U\rightarrow V$ such that $S_k=\proj _{W_k}\circ S$ for $1\leq k\leq m$.
-		\item \label{thm4.4.14(ii)}Let $T_k\colon W_k\rightarrow U$ be linear.  Then, there is a unique linear-transformation $T\colon V\rightarrow U$ such that $\restr{T}{W_k}=W_k$ for $1\leq k\leq m$.
+		\item \label{thm4.4.14(i)}Let $S_k\colon U\rightarrow V_k$ be linear.  Then, there is a unique linear-transformation $S\colon U\rightarrow V$ such that $S_k=\proj _{V_k}\circ S$ for $1\leq k\leq m$.
+		\item \label{thm4.4.14(ii)}Let $T_k\colon V_k\rightarrow U$ be linear.  Then, there is a unique linear-transformation $T\colon V\rightarrow U$ such that $\restr{T}{V_k}=T_k$ for $1\leq k\leq m$.
 	\end{enumerate}
 	\begin{rmk}
 		More explicitly, the first implies that
@@ -777,7 +884,7 @@ We now turn to defining the coordinates of a linear-transformation with respect 
 		\begin{equation}
 			T(v_1+\cdots +v_m)=T_1(v_1)+\cdots +T_m(v_m)
 		\end{equation}
-		for $v_k\in W_k$.
+		for $v_k\in V_k$.
 	\end{rmk}
 	\begin{rmk}
 		You should draw an analogy between the property stated in \cref{thm4.4.14(i)} and the corresponding property for \emph{Cartesian products} of sets, namely, that you can define a function $Z\rightarrow X\times Y$ by specifying its ``components'' $Z\rightarrow X$ and $Z\rightarrow Y$.  You will learn when you study category theory in more depth that these both serve examples of \emph{limits}, in fact a special type of limit called a \emph{product} (one in the category of $\K$-modules and the other in the category of sets).
@@ -837,7 +944,7 @@ Combining these two properties, with both the domain and the codomain as a direc
 	\end{proof}
 \end{thm}
 As before, this yields an isomorphism from the space of linear-transformations to the space of matrices (of linear-transformations).
-\begin{prp}{$\coordinates{\blankdot}{\basis{C}\leftarrow \basis{B}}$ is an isomorphism}{}
+\begin{prp}{$\coordinates{\blankdot}{\basis{W}\leftarrow \basis{V}}$ is an isomorphism}{}
 	Let $\K$ be a cring, let $V$ and $W$ be $\K$-modules, and let $V=V^1\oplus \cdots \oplus V^n$ and $W=W^m\oplus \cdots \oplus W^m$ be direct-sum decompositions of $V$ and $W$ respectively.  Then,
 	\begin{equation}
 		\Mor _{\Mod{\K}}(V,W)\ni T\mapsto \coordinates{T}{\collection{W}\leftarrow \collection{V}}\in \Matrix _{\collection{W}\times \collection{V}}
@@ -990,6 +1097,9 @@ Of course, $V=V$ is itself a direct-sum decomposition, and one that generally wo
 	\begin{rmk}
 		You can view the requirement that $V$ be nonzero as roughly analogous to how we disallow $1\in \Z$ from being considered prime.
 	\end{rmk}
+	\begin{rmk}
+		Warning:  You will likely hear the term ``irreducible'' at some point.  This is \emph{not} the same as ``indecomposable'', though they are certainly related---irreducible implies indecomposable.
+	\end{rmk}
 \end{dfn}
 We now consider whether we can, and if so, how can we, decompose $V$ into indecomposable submodules.  The basic idea is as follows.  If $V$ is indecomposable, we're done; otherwise, there are proper nonzero submodules $U,W\subseteq V$ such that $V=U\oplus W$.  If $U$ and $W$ are indecomposable, again, we're done; otherwise, we can break up $U$ and/or $W$ as a direct-sum of proper nonzero submodules, and so on.  In general, there is no need for this process to terminate.  However, the next result says that it does in the primary case of interest.
 \begin{prp}{}{prp4.5.17}
@@ -1102,7 +1212,7 @@ Our first hint at how we might do all this is given by the following result \cre
 	\end{proof}
 \end{prp}
 
-The next idea is to apply this decomposition inductively:  List the distinct eigenvalues of $T$, $\lambda _1,\ldots ,\lambda _m$, write $V=\Ker ([T-\lambda _1]^{\dim (V)})\oplus W_1$, where we have defined $W_1\ceqq \Ima ([T-\lambda _1]^{\dim (V)})$, write $W_1=\Ker ([\restr{T-\lambda _2}{W_1}])^{\dim (W_1)}\oplus W_2$, where we have defined $W_2\ceqq \Ima (\restr{[T-\lambda _2]^{\dim (V)}}{W_1}$, and so on.  With any luck, we will find $W_m=0$, so that $V$ can be written as a finite direct-sum of subspaces of the form $\Ker ([T-\lambda ]^{\dim (V)})$.
+The next idea is to apply this decomposition inductively:  List the distinct eigenvalues of $T$, $\lambda _1,\ldots ,\lambda _m$, write $V=\Ker ([T-\lambda _1]^{\dim (V)})\oplus W_1$, where we have defined $W_1\ceqq \Ima ([T-\lambda _1]^{\dim (V)})$, write $W_1=\Ker ([\restr{T-\lambda _2}{W_1}]^{\dim (W_1)})\oplus W_2$, where we have defined $W_2\ceqq \Ima (\restr{[T-\lambda _2]}{W_1}^{\dim (V)}$, and so on.  With any luck, we will find $W_m=0$, so that $V$ can be written as a finite direct-sum of subspaces of the form $\Ker ([T-\lambda ]^{\dim (V)})$.
 
 That said, the issue or not of whether we can make such a decomposition is going to be irrelevant if we don't understand the behavior of $T$ on subspaces of the form $\Ker ([T-\lambda ])^{\dim (V)})$.  In brief, $T-\lambda$ is \emph{nilpotent} on this subspace, which brings us to the next subsubsection.
 
@@ -1114,9 +1224,9 @@ Let $T\colon V\rightarrow V$ be a linear operator and let $\basis{B}$ be a basis
 \begin{equation}
 	\coordinates{T}{\basis{B}}=D+N,
 \end{equation}
-where $D$ is diagonal and $N$ is `small' in some sense.
+where $D$ is diagonal and $N$ is `small' (i.e.~`close' to $0$) in some sense.
 
-To see what notion of ``small'' we might want, recall that we are going to try to decompose $V$ into subspaces of the form $\Ker ([T-\lambda ]^{\dim (V)})$, and so are also interested in understanding the behavior of the restriction of $T$ to these subspaces.  If this were simply $\Ker (T-\lambda )$, that is, an eigenspace,\footnote{At least for $\lambda$ an eigenvalue.} we would have $T-\lambda =0$ on this subspace---in the notation above, we have $D=\lambda$ and $N=0$.  However, we don't quite have that for the subspace $\Ker ([T-\lambda ]^{\dim (V)})$.  Rather, we only have that the restriction of $T-\lambda$ to this subspace is \emph{nilpotent}.  It is in this sense that $N$ will be small.
+To see what notion of ``small'' we might want, recall that we are going to try to decompose $V$ into subspaces of the form $\Ker ([T-\lambda ]^{\dim (V)})$, and so are also interested in understanding the behavior of the restriction of $T$ to these subspaces.  If this were simply $\Ker (T-\lambda )$, that is, an eigenspace,\footnote{At least for $\lambda$ an eigenvalue.} we would have $T-\lambda =0$ on this subspace---in the notation above, we have $D=\lambda$ and $N=0$.  However, we don't quite have that for the subspace $\Ker ([T-\lambda ]^{\dim (V)})$.  Rather, we only have that the restriction of $T-\lambda$ to this subspace is \emph{nilpotent}.  It is in this sense that $N$ will be ``small''.
 \begin{dfn}{Nilpotent}{Nilpotent}
 	Let $X$ be a rg and let $x\in X$.  Then, $x$ is \term{nilpotent}\index{Nilpotent} iff there is some $m\in \N$ such that $x^m=0$.
 	\begin{rmk}
@@ -1192,8 +1302,8 @@ We thus know that nilpotent linear-transformations are essentially never diagona
 		Now suppose the result is true for $m-1$.  If $m$ is the smallest positive integer such that $N^m=0$ on $V$, then $m-1$ is the smallest positive integer such that $N^{m-1}=0$ on $\Ima (N)$.  Furthermore, $N(v_0)\in \Ima (N)$ is such that $N^{(m-1)-1}(N(v_0))=N^{m-1}(v_0)\neq 0$.  Thus, if we can show that $\Ima (N)$ is indecomposable still, then the induction hypothesis will gives us that $\Ima (N)=\Span (N^{m-1}(v_0),\ldots ,N(v_0))$.
 		
 		\Step{Show that $\Ima (N)$ is indecomposable}[stp4.6.17.4]
-		So, let $U,W\subseteq \Ima (N)$ be subspaces and suppose that $\Ima (N)=U\oplus W$ with $U$ and $W$ $N$-invariant.  Then write $\Ima (N)=U\oplus W\oplus V'$ for some subspace $V'\subseteq V$ (by \cref{prp4.4.24}).  For every $v\in V'$, we may write
-		\begin{equation}
+		So, let $U,W\subseteq \Ima (N)$ be subspaces and suppose that $\Ima (N)=U\oplus W$ with $U$ and $W$ $N$-invariant.  Then write $V=U\oplus W\oplus V'$ for some subspace $V'\subseteq V$ (by \cref{prp4.4.24}).  For every $v\in V'$, we may write
+		\begin{equation}\label{eqn4.4.132}
 			\begin{split}
 				N(v) & =\proj _U(N(v))+\proj _W(N(v)) \\
 				& =\footnote{$N$ commutes with the projections because the subspaces are invariant---see \cref{prp4.5.9}.}N(\proj _U(v))+N(\proj _W(v))\eqqc N(v_U)+N(v_W),
@@ -1203,7 +1313,7 @@ We thus know that nilpotent linear-transformations are essentially never diagona
 		\begin{equation}
 			\breve{\basis{B}}\ceqq \{ b-b_U:b\in \basis{B}'\} 
 		\end{equation}
-		and $\breve{V}\ceqq \Span (\breve{\basis{B}})$.  Note that $N(b-b_U)=N(v_w)\in W$, and so $W+\breve{V}$ is an invariant subspace.  Thus, if we can show $V=U\oplus W\oplus \breve{V}$, indecomposability will imply that either $U=0$ or $W\oplus \breve{V}=0$, so that either $U=0$ or $W=0$, as desired.
+		and $\breve{V}\ceqq \Span (\breve{\basis{B}})$.  From \eqref{eqn4.4.132}, we see that $N(b-b_U)=N(b_W)\in W$, and so $W+\breve{V}$ is an invariant subspace.  Thus, if we can show $V=U\oplus W\oplus \breve{V}$, indecomposability will imply that either $U=0$ or $W\oplus \breve{V}=0$, so that either $U=0$ or $W=0$, as desired.
 		
 		So, suppose that $0=u+w+\breve{v}$ for $u\in U$, $w\in W$, and $\breve{v}\in \breve{V}$.  Write $\breve{v}=\alpha _1(b_1-[b_1]_U)+\cdots +\alpha _m(b_m-[b_m]_U)$, so that
 		\begin{equation}
@@ -1266,7 +1376,7 @@ The use of nilpotent operators is far more common, and in our primary case of in
 	\end{rmk}
 \end{exm}
 On the other hand, in finite-dimensions, they are equivalent.
-\begin{prp}{}{}
+\begin{prp}{}{prp4.4.130}
 	Let $V$ be a finite-dimensional vector space and let $T\colon V\rightarrow V$ be linear.  Then, $T$ is nilpotent iff it is locally-nilpotent.
 	\begin{proof}
 		$(\Rightarrow )$ This is always true.
@@ -1447,21 +1557,24 @@ Related to the fact that we can write the generalized-eigenspace as a union in t
 		Note that $\Rank (v)\leq \dim (V)$ if $V$ is finite-dimensional by the previous result \cref{thm4.4.143}.
 	\end{rmk}
 \end{dfn}
-\begin{prp}{Properties of higher rank eigenspaces}{}
+\begin{prp}{Properties of higher rank eigenspaces}{prp4.4.154}
 	Let $V$ be a $\K$-module, let $T\colon V\rightarrow V$ be linear, and let $\lambda \in \K$ be an eigenvalue of $T$.  Then,
 	\begin{enumerate}
-		\item
+		\item \label{prp4.4.154(i)}
 		\begin{equation}
 			\Eig _{\lambda}^m=\Ker ([T-\lambda ]^m);
 		\end{equation}
-		\item $\Eig _{\lambda}^m\subseteq V$ is a subspace; and
+		\item \label{prp4.4.154(ii)}$\Eig _{\lambda}^m\subseteq V$ is a $T$-invariant subspace; and
 		\item
 		\begin{equation}
 			\Eig _{\lambda}^0\subseteq \Eig _{\lambda}^1\subseteq \Eig _{\lambda}^2\subseteq \cdots ;
 		\end{equation}
 		and
-		\item if $v\in \Eig _{\lambda}$ has rank $m\in Z^+$, then $[T-\lambda ](v)$ has rank $m-1$.
+		\item \label{prp4.4.154(iii)}if $v\in \Eig _{\lambda}$ has rank $m\in Z^+$, then $[T-\lambda ](v)$ has rank $m-1$.
 	\end{enumerate}
+	\begin{rmk}
+		In particular, $\Eig _{\lambda}^0=0$ and $\Eig _{\lambda}^1=\Eig _{\lambda}$.
+	\end{rmk}
 	\begin{proof}
 		We leave this as an exercise.
 		\begin{exr}[breakable=false]{}{}
@@ -1565,12 +1678,67 @@ We mentioned after \cref{exm4.3.7} that, for a given linear operator, there is a
 
 \subsubsection{The theorem.  Finally.}
 
-We now come to one of the most important theorems of the chapter (indeed, of the entire notes).
-\begin{thm}{Generalized-eigenspace decomposition\hfill}{GeneralizedEigenspaceDecomposition}
-	Let $V$ be a finite-dimensional vector space over an algebraically-closed field $\F$, let $T\colon V\rightarrow V$ be linear, and denote the eigenvalues of $T$ by $\lambda _1,\ldots ,\lambda _m$.  Then,
+We're finally ready to state the Jordan Canonical Form Theorem, which, among other things, details the near-diagonal form our matrices will take in a suitable basis.  To state it, however, it will be convenient to have a name for a special type of matrix appearing in the description.
+\begin{dfn}{Jordan block}{JordanBlock}
+	Let $\K$ be a ring, let $\lambda \in \K$, and let $m\in \Z ^+$.  Then, the \term{Jordan block}\index{Jordan block}, $\Jord _{\lambda ,m}$\index[notation]{$\Jord _{\lambda ,m}$}, of size $m$ with eigenvalue $\lambda$ is the $m\times m$ matrix
 	\begin{equation}
-	V=\Eig _{\lambda _1}^{\infty}\oplus \cdots \oplus \Eig _{\lambda _m}^{\infty}.
+	\Jord _{\lambda ,m}\ceqq \begin{bmatrix}\lambda & 1 & 0 & \cdots & 0& 0 \\ 0 & \lambda & 1 & \cdots & 0 & 0 \\ \vdots & \ddots & \ddots & \ddots & \ddots & \vdots \\ 0 & 0 & 0 & \cdots & \lambda & 1 \\ 0 & 0 & 0 & \cdots & 0 & \lambda\end{bmatrix}.
 	\end{equation}
+	\begin{rmk}
+		Note that this can be written as
+		\begin{equation}
+		\Jord _{\lambda ,m}=\lambda \id +N_m,
+		\end{equation}
+	\end{rmk}
+	where we have used the notation
+	\begin{equation}
+	N_m\ceqq \begin{bmatrix}0 & 1 & 0 & \cdots & 0 & 0 \\ 0 & 0 & 1 & \cdots & 0 & 0 \\ \vdots & \ddots & \ddots & \ddots & \ddots & \vdots \\ 0 & 0 & 0 & \cdots & 0 & 1 \\ 0 & 0 & 0 & \cdots & 0 & 0\end{bmatrix}.
+	\end{equation}
+\end{dfn}
+And now, what is arguably the most important theorem in the entirety of the notes.
+\begin{thm}{Jordan Canonical Form Theorem}{GeneralizedEigenspaceDecomposition}
+	Let $V$ be a finite-dimensional vector space over an algebraically-closed field $\F$, let $T\colon V\rightarrow V$ be linear, and denote the eigenvalues of $T$ by $\lambda _1,\ldots ,\lambda _m$.  Then,
+	\begin{enumerate}
+		\item \label{GeneralizedEigenspaceDecomposition(i)}
+		\begin{equation}\label{eqn4.4.173}
+			V=\Eig _{\lambda _1}^{\infty}\oplus \cdots \oplus \Eig _{\lambda _m}^{\infty};
+		\end{equation}
+		\item \label{GeneralizedEigenspaceDecomposition(ii)}the coordinates of $T$ with respect to this direct-sum decomposition is
+		\begin{equation}
+			\begin{bmatrix}\lambda _1\id _{\Eig _{\lambda _1}^{\infty}}+N_1 & \cdots & 0 \\ \vdots & \ddots & \vdots \\ 0 & \cdots & \lambda _m\id _{\Eig _{\lambda _m}^{\infty}}+N_m\end{bmatrix},
+		\end{equation}
+		where $N_k\colon \Eig _{\lambda _k}^{\infty}\rightarrow \Eig _{\lambda _k}^{\infty}$ is nilpotent linear;
+		\item \label{GeneralizedEigenspaceDecomposition(iii)}for every $1\leq k\leq m$, there is a basis $\basis{B}_k$ for $\Eig _{\lambda _k}^{\infty}$ such that the coordinates
+		\begin{equation}\label{eqn4.4.175}
+			\coordinates{\lambda _k\id _{\Eig _{\lambda _k}^{\infty}}+N_k}{\basis{B}_k\leftarrow \basis{B}_k}
+		\end{equation}
+		is a direct-sum of Jordan blocks with eigenvalue $\lambda _k$;
+		\item \label{GeneralizedEigenspaceDecomposition(iv)}$\basis{B}\ceqq \basis{B}_1\cup \cdots \basis{B}_m$ is a basis for $V$ such that the coordinates
+		\begin{equation}\label{eqn4.4.176}
+			\coordinates{T}{\basis{B}\leftarrow \basis{B}}
+		\end{equation}
+		is the direct-sum of the matrices in \eqref{eqn4.4.175}; and
+		\item \label{GeneralizedEigenspaceDecomposition(v)}if $\basis{C}$ is another basis of $V$ that has the property that $\coordinates{T}{\basis{C}\leftarrow \basis{C}}$ is a direct-sum of Jordan blocks, then the set of Jordan blocks appearing in this decomposition is the same as the set of Jordan blocks appearing in the decomposition of $\coordinates{T}{\basis{B}\leftarrow \basis{B}}$.
+	\end{enumerate}
+	\begin{rmk}
+		\eqref{eqn4.4.173} is the \term{generalized-eigenspace decomposition}\index{Generalized-eigenspace decomposition} of $V$.
+	\end{rmk}
+	\begin{rmk}
+		The matrix in \eqref{eqn4.4.176} is the \term{Jordan Canonical Form}\index{Jordan Canonical Form} of $T$.  It is also called the \term{Jordan Normal Form}\index{Jordan Normal Form} of $T$, but I prefer ``Jordan Canonical Form'' for the simple reason that the word ``normal'' tends to be overused in mathematics.
+	\end{rmk}
+	\begin{rmk}
+		In short:
+		
+		\cref{GeneralizedEigenspaceDecomposition(i)} says that $V$ is a direct-sum of the generalized-eigenspaces.
+		
+		\cref{GeneralizedEigenspaceDecomposition(ii)} says that the matrix of $T$ with respect to this decomposition is block-diagonal with $\lambda _k\id _{\Eig _{\lambda _k}^{\infty}}+N_k$ on the diagonal.
+		 
+		\cref{GeneralizedEigenspaceDecomposition(iii)} says that we can choose bases for each of the generalized-eigenspaces in which the matrix associated to the linear operators $\lambda _k\id _{\Eig _{\lambda _k}^{\infty}}+N_k$ is a direct-sum of Jordan blocks.
+		 
+		\cref{GeneralizedEigenspaceDecomposition(iv)} says that these bases assemble together to form a basis for all of $V$ for which the matrix of $T$ is a direct-sum of the matrices of the previous part, and so in particular a direct-sum of Jordan blocks.
+		
+		\cref{GeneralizedEigenspaceDecomposition(v)} says that the Jordan Canonical Form of $T$ is essentially unique in the sense that, if you write $T$ as a direct-sum of Jordan blocks, the Jordan blocks appearing in that decomposition must be exactly the same as the ones you found before.
+	\end{rmk}
 	\begin{rmk}
 		The reason for the asymmetry of the handedness in this statement is because $V$ is a \emph{left} $\F$-module.  Had we written scaling on the right so that $V$ were a right $\F$-module, then the hypothesis would instead be that $\F$ is \emph{left} algebraically-closed.
 	\end{rmk}
@@ -1581,16 +1749,13 @@ We now come to one of the most important theorems of the chapter (indeed, of the
 		In particular, generalized-eigenvectors with distinct eigenvalues are linearly-independent.
 	\end{rmk}
 	\begin{rmk}
-		Finally, we have succeeded in decomposing $V$ as a direct-sum of $T$-invariant subspaces on which the behavior of $T$ is relatively well-understood.  All that remains is to put the final pieces together to determine exactly what form the matrix of $T$ will take with respect to this direct-sum decomposition.
-	\end{rmk}
-	\begin{rmk}
 		This is one of the few times, and most likely the most significant time, where I was not able to remove the assumption of commutativity.  The reason for this is that eigenvalues are central, and so you would need to assume that all nonconstant polynomials have \emph{central} roots.  But if you do that, then you automatically have a field!\footnote{For every $\alpha \in \F$, $x-\alpha$ would have a central root, implying that $\alpha$ is central.}
 	\end{rmk}
 	\begin{proof}
-		We proceed by (strong induction) on $\dim (V)$.  If $\dim (V)=0$, the statement is vacuously true.
+		\cref{GeneralizedEigenspaceDecomposition(i)} We proceed by (strong induction) on $\dim (V)$.  If $\dim (V)=0$, the statement is vacuously true.
 		
 		So, let $d\ceqq \dim (V)\in \Z ^+$ and suppose that the result is true whenever the dimension of the vector space is less than $d$.
-		\begin{lma}{}{}
+		\begin{lma}[break at=20cm/0pt]{}{}
 			Let $V$ be a finite-dimensional vector space over an algebraically-closed field and let $T\colon V\rightarrow V$ be linear.  Then, $T$ has an eigenvalue.
 			\begin{proof}
 				Let $v\in V$ be nonzero.
@@ -1660,5 +1825,36 @@ We now come to one of the most important theorems of the chapter (indeed, of the
 			v=v_1+u_2+\cdots +u_m.
 		\end{equation}
 		As generalized-eigenvectors with distinct eigenvalues are linearly-independent (\cref{prp4.4.157}), this implies that $v_1=0$, $u_2=v$, and $u_3=\cdots =u_m=0$.  Thus, $v\in U$, as desired.
+		
+		\blni
+		\cref{GeneralizedEigenspaceDecomposition(ii)} As each generalized-eigenspace is invariant (\cref{prp4.4.154}\cref{prp4.4.154(ii)}, the \namerefpcref{thm4.5.2} says that the matrix of $T$ with respect to this direct-sum decomposition is
+		\begin{equation}
+			\begin{bmatrix}\restr{T}{\Eig _{\lambda _1}^{\infty}} & \cdots & 0 \\ \vdots & \ddots & \vdots \\ 0 & \cdots & \restr{T}{\Eig _{\lambda _m}^{\infty}}\end{bmatrix}
+		\end{equation}
+		By definition of generalized-eigenspaces, $N_k\ceqq \restr{T}{\Eig _{\lambda _k}^{\infty}}-\lambda _k\id _{\Eig _{\lambda _k}}^{\infty}$ is locally-nilpotent, hence nilpotent by finite-dimensionality (\cref{prp4.4.130}).  We thus have that the matrix of $T$ with respect to this direct-sum decomposition is indeed of the form
+		\begin{equation}
+			\begin{bmatrix}\lambda _1\id _{\Eig _{\lambda _1}^{\infty}}+N_1 & \cdots & 0 \\ \vdots & \ddots & \vdots \\ 0 & \cdots & \lambda _m\id _{\Eig _{\lambda _m}^{\infty}}+N_m\end{bmatrix},
+		\end{equation}
+		where $N_k\colon \Eig _{\lambda _k}^{\infty}\rightarrow \Eig _{\lambda _k}^{\infty}$ is nilpotent linear.
+		
+		\blni
+		\cref{GeneralizedEigenspaceDecomposition(iii)} By \cref{thm4.6.17}, there is a basis $\basis{B}_k$ of $\Eig _{\lambda _k}^{\infty}$ such that
+		\begin{equation}
+			\coordinates{\restr{T}{\Eig _{\lambda _k}^{\infty}}-\lambda _k\id _{\Eig _{\lambda _k}^{\infty}}}{\basis{B}_k\leftarrow \basis{B}_k}
+		\end{equation}
+		is a direct-sum of Jordan blocks with eigenvalue $0$, and hence
+		\begin{equation}
+			\coordinates{\restr{T}{\Eig _{\lambda _k}^{\infty}}}{\basis{B}_k\leftarrow \basis{B}_k}
+		\end{equation}
+		is a direct-sum of Jordan blocks with eigenvalue $\lambda _k$.
+		
+		\blni
+		\cref{GeneralizedEigenspaceDecomposition(iv)} As $\basis{B}_k$ is a basis for $\Eig _{\lambda _k}^{\infty}$ and $V=\Eig _{\lambda _1}^{\infty}\oplus \cdots \oplus \Eig _{\lambda _m}^{\infty}$, $\basis{B}\ceqq \basis{B}_1\cup \cdots \cup \basis{B}_m$ is a basis for $V$.  Furthermore, $\coordinates{T}{\basis{B}\leftarrow \basis{B}}$ is a block-diagonal matrix whose $k^{\text{th}}$ block is $\coordinates{\lambda _k\id _{\Eig _{\lambda _k}^{\infty}}+N_k}{\basis{B}_k\leftarrow \basis{B}_k}$.
+		\begin{exr}[breakable=false]{}{}
+			Check this.
+		\end{exr}
+		
+		\blni
+		\cref{GeneralizedEigenspaceDecomposition(v)} Let $\basis{C}$ is another basis of $V$ that has the property that $\coordinates{T}{\basis{C}\leftarrow \basis{C}}$ is a direct-sum of Jordan blocks.  The eigenvalues of such a direct-sum are the same as the eigenvalues of $T$, and so the eigenvalues appearing among the Jordan blocks are the same for both the bases $\basis{B}$ and $\basis{C}$.  So, fix $\lambda \in \F$ an eigenvalue of $T$, and for the moment consider only the restriction $S\ceqq \restr{T}{\Eig _{\lambda}^{\infty}}\colon \Eig _{\lambda}^{\infty}$.  As $$\coordinates{T}{\basis{C}\leftarrow \basis{C}}$$ is a direct-sum of Jordan blocks, the elements of $\basis{C}$ are all generalized-eigenvectors, and so $\basis{C}_{\lambda}\ceqq \basis{C}\cap \Eig _{\lambda}^{\infty}$ is a basis for $\Eig _{\lambda}^{\infty}$.  Similarly for $\basis{B}_{\lambda}\ceqq \basis{B}\cap \Eig _{\lambda}^{\infty}$.  Thus, $\coordinates{S}{\basis{B}}$ and $\coordinates{S}{\basis{C}}$ are both direct-sums of Jordan blocks and we would like to prove that the size of the Jordan blocks appearing in this decomposition are the same (the eigenvalues are of course all equal to $\lambda$).  Let $m\in \Z ^+$ be the smallest positive integer such that $[S-\lambda ]^m=0$ (there is some such $m$ as we know $S-\lambda$ is nilpotent).  It follows that $m$ is the smallest positive integer such that $\coordinates{[S-\lambda ]}{\basis{B}}^m=0$ and also the smallest positive integer such that $\coordinates{[S-\lambda ]}{\basis{C}}^m=0$.  It follows that the largest Jordan block appearing in both of these matrices is size $m$.  Now, replace $S$ with $S-\Jord _{\lambda ,m}$ and apply the same logic again.  We find again that the largest Jordan blocks appearing in these decompositions have the same size.  Proceeding inductively, we see that they have the same Jordan blocks.
 	\end{proof}
 \end{thm}
